# townwars-py

./: README.md  main.py  pyproject.toml
src/: colors.py  component.py  config.py  game_loop.py  state.py
src/classes/: map.py  star.py  town.py
src/phases/: editor.py  exit.py  gameplay.py  mainmenu.py  phase.py
src/ui/: button.py  text_display.py
src/utils/: logging.py
